# ML_OPS

./: .gitignore  Dockerfile  README.md  app.py  base_model.py  client.py  dashboard.py  data_validation.py  docker-compose.yaml  dvc_service.py  entrypoint.sh  grpc_server.py  health.py  models.py  new_app.py  pyproject.toml  s3_service.py  service.proto  service_pb2.py  service_pb2_grpc.py
.dvc/: config
tests/: test_data.py  test_models.py
titanic/: eval_data.json  splitting.py  test_data.json  train_data.json
validation/: data_validation.py
