[project]
name = "ml-ops-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "slava",email = "arsenjev.vyacheslav@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "catboost (>=1.2.7,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "psutil (>=6.1.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
