[project]
name = "ml-ops-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "slava",email = "arsenjev.vyacheslav@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "catboost (>=1.2.7,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "psutil (>=6.1.1,<7.0.0)",
    "grpcio (>=1.70.0,<2.0.0)",
    "grpcio-tools (>=1.70.0,<2.0.0)",
    "googleapis-common-protos (>=1.67.0,<2.0.0)",
    "grpcio-reflection (>=1.70.0,<2.0.0)",
    "ruff (>=0.9.6,<0.10.0)",
    "streamlit (>=1.42.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "dvc[s3] (>=3.59.0,<4.0.0)",
    "boto3 (>=1.36.0,<1.36.4)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
